# streamlit-codespaces

./: .coverage  .gitignore  1_Home.py  Ethical Report.docx  Light.ipynb  SECURITY.md  VotingRegressor.py  dashboard.py  feedback.txt  main.py  model.sav  model_dashboard.ipynb  model_for_picking.py  poetry101.md  pyproject.toml
.github/workflows/: deployment-build.yml  deployment-send.yml  unit_testing.yml
.streamlit/: config.toml
DeliverablePrep/: Improving Breda.pptx  old_generator.ipynb  simple_merge_generator.ipynb
DeliverablePrep/MarksModels/: ARIMA.ipynb  SARIMAX.ipynb
misc_scripts/: .coverage  GBM.ipynb  Light.ipynb  Neuralnetwork.ipynb  Test.ipynb  XGB.py  data_transform.ipynb  test_model.ipynb  test_model.py  unit_test.py
pages/: 1_Methodology.py  2_EDA.py  3_Machine_learning.py  4_Key_findings.py  5_Ethics.py  6_Next_steps.py  7_Sources.py  corrmx.csv  eda.py  features_all_data.csv  label_crime_allmetrics.csv
