[tool.poetry]
name = "crime-predict"
version = "0.1.0"
description = "Predicting crime based on set of features"
authors = ["ShanOomes220231 <112852887+ShanToa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, != 3.9.7"
geopandas = "^0.10.2"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
streamlit = "^1.23.1"
joblib = "^1.2.0"
statsmodels = "^0.14.0"
logging = "^0.4.9.6"
mypy = "^1.3.0"
pytest-cov = "^4.1.0"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
seaborn = "^0.12.2"
pyproject-toml = "^0.0.10"
altair = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
